Checking for updated packages after uninstall + fixed invisible paginator

--- a/apps/browser/src/app/package/search/search.component.less
+++ b/apps/browser/src/app/package/search/search.component.less
@@ -19,3 +19,7 @@ ngb-pagination {
     overflow-x: auto;
     overflow-y: hidden;
 }
+
+npmb-package-list {
+    height: calc(100% - 80px) !important;
+}
